@@ -824,7 +824,7 @@ unq:name@System.system_id,unq:name,ls_from_star
 'Miphifa','Happis',0.0
 'Mirdi','Mcdivitt Settlement',0.0
 'Mizar','Judson Station',0.0
-'Mokosh','Bethe Station',0.0
+'Mokosh','Bethe Station',2500.0
 'Mokosh','Lubin Orbital',0.0
 'Mombaluma','Bennett Colony',0.0
 'Mombaluma','Hughes-Fulford Terminal',0.0
